# extreme-tuxanci

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  INSTALL  INSTALL.md  Makefile  README  README.md  README.sk  TODO  TODO.md  build.sh  ci  clean.sh  config.h  configure  control  current_config.h  deb-build.sh  deb_config.h  defaults.h  generate_gettext_pot.sh  main.c  publicserver.sh  readme.txt  resolve.c  resolve.h  server.conf  sockets.c  sockets.cpp  sockets.h  tarball-build.sh  tarballbin-build.sh  tuxanci-ng.sh
arena/: construction_site.map  for_a_good_night.map  in_a_captivity_of_8-bit.map  mapa1.map  night_workshift.map
cmake/: CPackConfig.cmake  CPackSourceConfig.cmake  FindBZIP2.cmake  FindCairo.cmake  FindGZIP.cmake  FindGettext.cmake  FindZIP.cmake  FindZZIP.cmake  MacroAddSources.cmake  Po.cmake
cmake/src/base/: path.h
conf/: keytable.conf
data/: CMakeLists.txt  tuxanci.1  tuxanci.desktop  tuxanci.desktop.in
data/arena/: CMakeLists.txt  ba_in_a_captivity_of_8-bit.map  construction_site.map  for_a_good_night.map  in_a_captivity_of_8-bit.map  night_workshift.map
data/conf/: CMakeLists.txt  arena.conf.in  server.conf
data/font/: CMakeLists.txt
data/image/: CMakeLists.txt
data/lang/: CMakeLists.txt  fr.lang  sk.lang
data/music/: CMakeLists.txt
data/sound/: CMakeLists.txt
handbook/: codestyle  handbook
include/: arena.h  arenaFile.h  bool.h  buffer.h  client.h  configFile.h  director.h  dynamicInt.h  font.h  gun.h  homeDirector.h  idManager.h  image.h  interface.h  item.h  layer.h  list.h  logFile.h  main.h  modules.h  music.h  myTimer.h  net_multiplayer.h  network.h  panel.h  path.h  pipe.h  proto.h  publicServer.h  screen.h  screen_analyze.h  screen_choiceArena.h  screen_gameType.h  screen_mainMenu.h  screen_setting.h  screen_world.h  server.h  shot.h  sound.h  space.h  (+13 more)
lang/: cs.lang  en.lang  fr.lang  lang.en  lang.sk  sk.lang
modules/: Makefile  Makefile-publicserver  list.h  modPipe.c  modTeleport.c  modWall.c
packaging/appimage/tuxanci-0.22.0.AppDir/: tuxanci-0.22.0.desktop
packaging/appimage/tuxanci-0.22.0.AppDir/usr/local/share/locale/cs_CZ/LC_MESSAGES/: tuxanci.mo
packaging/appimage/tuxanci-0.22.0.AppDir/usr/local/share/locale/de_DE/LC_MESSAGES/: tuxanci.mo
packaging/deb/: build.sh  control  tuxanci.desktop
packaging/gentoo/: tuxanci-9999.ebuild
packaging/linux/: build.sh  client.sh  server.sh
packaging/source/: source.sh
packaging/windows/: LICENCES
po/: CMakeLists.txt  cs_CZ.po  de_DE.po  tuxanci.pot
scripts/: generate_gettext_pot.sh
src/: CMakeLists.txt  Makefile  Makefile-publicServer  arena.c  arenaFile.c  audio.c  buffer.c  checkFront.c  client.c  configFile.c  director.c  dynamicInt.c  font.c  game.c  gun.c  heightScore.c  idManager.c  image.c  interface.c  item.c  language.c  layer.c  list.c  logFile.c  main.c  modules.c  music.c  myTimer.c  net_multiplayer.c  network.c  panel.c  pipe.c  protect.c  proto.c  publicServer.c  screen.c  screen_analyze.c  screen_credits.c  screen_gameType.c  screen_mainMenu.c  (+24 more)
src/audio/: CMakeLists.txt  audio.c  audio.h  music.c  music.h  sound.c  sound.h
src/base/: archive.c  archive.h  arena.c  arena.h  arenaFile.c  arenaFile.h  bool.h  buffer.c  buffer.h  checkFront.c  checkFront.h  director.c  director.h  downServer.c  downServer.h  exportFunction.c  exportFunction.h  gun.c  gun.h  homeDirector.c  homeDirector.h  idManager.c  idManager.h  index.c  index.h  item.c  item.h  list.c  list.h  main.c  main.h  modules.c  modules.h  msg.h  myTimer.c  myTimer.h  my_path.c  my_path.h  net_multiplayer.c  net_multiplayer.h  (+29 more)
src/client/: chat.c  chat.h  client.c  client.h  config.c  config.h  configFile.c  configFile.h  control.c  control.h  font.c  font.h  fontConfig.c  fontConfig.h  game.c  game.h  hotKey.c  hotKey.h  image.c  image.h  interface.c  interface.h  keyboardBuffer.c  keyboardBuffer.h  keytable.c  language.c  layer.c  layer.h  mouse_buffer.c  panel.c  panel.h  pauza.c  pauza.h  radar.c  radar.h  saveDialog.c  saveDialog.h  saveLoad.c  saveLoad.h  screen.c  (+5 more)
src/downserver/: CMakeLists.txt  Makefile  arena.conf  downServer.c
src/modules/: CMakeLists.txt  modAI.c  modBasic.c  modMove.c  modPipe.c  modTeleport.c  modWall.c
src/net/: CMakeLists.txt  dns.c  dns.h  tcp.c  tcp.h  udp.c  udp.h
src/net_unix/: udp.c
src/screen/: analyze.c  browser.c  choiceArena.c  choiceArena.h  credits.c  downArena.c  downArena.h  gameType.c  gameType.h  mainMenu.c  mainMenu.h  screen_analyze.c  screen_analyze.h  screen_browser.c  screen_browser.h  screen_choiceArena.c  screen_choiceArena.h  screen_credits.c  screen_downArena.c  screen_downArena.h  screen_gameType.c  screen_gameType.h  screen_mainMenu.c  screen_mainMenu.h  screen_setting.c  screen_setting.h  screen_settingKeys.c  screen_settingKeys.h  screen_table.c  screen_world.c  screen_world.h  setting.c  setting.h  settingKeys.c  settingKeys.h  table.c  world.c  world.h
src/server/: heightScore.c  highScore.c  highScore.h  log.c  log.h  publicServer.c  publicServer.h  serverConfigFile.c  serverConfigFile.h
src/widget/: button.c  buttonimage.c  catchkey.c  check.c  choicegroup.c  image.c  image.h  label.c  select.c  textfield.c  widget.c  widget.h  widget_button.c  widget_button.h  widget_buttonimage.c  widget_buttonimage.h  widget_catchkey.c  widget_catchkey.h  widget_check.c  widget_check.h  widget_choicegroup.c  widget_choicegroup.h  widget_container.c  widget_container.h  widget_image.c  widget_image.h  widget_label.c  widget_label.h  widget_select.c  widget_select.h  widget_statusbar.c  widget_statusbar.h  widget_textfield.c  widget_textfield.h
tuxanci-master/: resolve.cpp  resolve.h  tuxanci-master
