###############################################################################
# tuxanci/data/arena/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
FILE ( GLOB files "*.zip" )
INSTALL ( FILES ${files}
	DESTINATION ${CMAKE_INSTALL_DATADIR}/${APPNAME}/arena/ )
###############################################################################