###############################################################################
# tuxanci/data/conf/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( Server )
	INSTALL ( FILES server.conf
 		DESTINATION ${CMAKE_INSTALL_ETCDIR}/${APPNAME} )
ENDIF ( Server )
###############################################################################